Created function to pull api info and report off of it, stub left in for eventual checking of corps/alliances from standings api and character api

--- a/templates/check.html
+++ b/templates/check.html
@@ -5,7 +5,7 @@
     {% if success %}
         <p>Listings will go here</p>
         <table>
-            <th>Player</th><th>Something else?</th>
+            <th>Player</th><th>Corp</th><th>Alliance</th><th>Misc</th>
             {{ data }}
         </table>
     {% endif %}
