Corrected listing on check page to show standings color as well as adding buttons for evewho and zkillboard.

--- a/templates/check.html
+++ b/templates/check.html
@@ -8,6 +8,7 @@
             <th>Player</th><th>Corp</th><th>Alliance</th><th>Misc</th>
             {{ data }}
         </table>
+        Ignoring all named characters at 5-10 and ISKHR folks
     {% endif %}
 
 
