Added note attribute and set up form to add notes to individual accounts

--- a/standings/static/css/main.css
+++ b/standings/static/css/main.css
@@ -121,6 +121,19 @@ form textarea#players {
   font-size: 1.1em;
 }
 
+form textarea#notes {
+  width: 500px;
+  height: 300px;
+  background-color: #fafafa;
+  -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
+  border: 1px solid #cccccc;
+  margin-bottom: 10px;
+  padding: 5px;
+  font-size: 1.1em;
+}
+
 form input#submit {
   display: block;
   -webkit-border-radius: 3px;
